# ipctesting

./: CMakeLists.txt
boost-ipc/: CMakeLists.txt  boost-ipc-client.cpp  boost-ipc-server.cpp  boost-ipc.h
boost-lockfree/: CMakeLists.txt  boost-lockfree-client.cpp  boost-lockfree-server.cpp  boost-lockfree.h
boost-shm-manual/: CMakeLists.txt  boost-shm-manual-client.cpp  boost-shm-manual-server.cpp  boost-shm-manual.h
zmq/: CMakeLists.txt  zmq-client.cpp  zmq-server.cpp
